--- a/Tests/fixtures/smartphone-27.yml
+++ b/Tests/fixtures/smartphone-27.yml
@@ -4925,3 +4925,93 @@
     model: Moto E7i Power
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; A509DL Build/RP1A.200720.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/94.0.4606.61 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 94.0.4606.61
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: TCL
+    model: A3
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (BlackBerry; U; BlackBerry 9900; en) AppleWebKit/534.11+ (KHTML, like Gecko) Version/7.1.0.342 Mobile Safari/534.11+
+  os:
+    name: BlackBerry OS
+    version: 7.1.0.342
+    platform: ""
+  client:
+    type: browser
+    name: BlackBerry Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.11"
+  device:
+    type: smartphone
+    brand: RIM
+    model: BlackBerry 9900
+  os_family: BlackBerry
+  browser_family: BlackBerry Browser
+-
+  user_agent: Mozilla/5.0 (BlackBerry; U; BlackBerry 9700; en) AppleWebKit/534.8+ (KHTML, like Gecko) Version/6.0.0.448 Mobile Safari/534.8+
+  os:
+    name: BlackBerry OS
+    version: 6.0.0.448
+    platform: ""
+  client:
+    type: browser
+    name: BlackBerry Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.8"
+  device:
+    type: smartphone
+    brand: RIM
+    model: BlackBerry 9700
+  os_family: BlackBerry
+  browser_family: BlackBerry Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; DAYTONA-G12) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Packard Bell
+    model: Daytona G12
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; 2109119DG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Mi 11 Lite 5G
+  os_family: Android
+  browser_family: Chrome
