--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -4586,3 +4586,39 @@
     model: Xpress Smartlife M76QF6
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; x86; Android 5.1; i15-TG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4600.1 YaBrowser/20.11.3.88.01 Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: x86
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.11.3.88.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Cube
+    model: iWork 10 Ultimate
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Lenovo PB-6505M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.50 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 95.0.4638.50
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: Tab V7
+  os_family: Android
+  browser_family: Chrome
