--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4782,7 +4782,7 @@ AllDocube:
 
 # Cube (short name Alldocube)
 Cube:
-  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML|I1-TF[BD]?|I1-TC|i1002S|Iwork10 Flagship|iwork10 Pro)(?:[);/ ]|$)'
+  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML|I1-TF[BD]?|I1-TC|i15-TG|i1002S|Iwork10 Flagship|iwork10 Pro)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'U27GT'
@@ -4797,6 +4797,8 @@ Cube:
       model: 'iWork 8 Air'
     - regex: 'I1-TC(?:[);/ ]|$)'
       model: 'iWork 8 Ultimate'
+    - regex: 'i15-TG(?:[);/ ]|$)'
+      model: 'iWork 10 Ultimate'
     - regex: '(?:i1002S|iwork10 Pro)(?:[);/ ]|$)'
       model: 'iWork 10 Pro'
     - regex: 'Iwork10 Flagship(?:[);/ ]|$)'
@@ -8145,7 +8147,7 @@ iBerry:
 
 # iHunt
 iHunt:
-  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021'
+  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021|Like 11 Panda Pro'
   device: 'smartphone'
   models:
     - regex: 'iHunt_Like'
@@ -8180,6 +8182,8 @@ iHunt:
       model: 'S$1 Ultra ApeX (2021)'
     - regex: 'S21 Ultra 4G 2021'
       model: 'S21 Ultra 4G (2021)'
+    - regex: 'Like 11 Panda Pro 2022'
+      model: 'Like 11 Panda Pro (2022)'
 
 # IconBIT
 IconBIT:
@@ -9939,7 +9943,7 @@ Lenovo:
     - regex: 'TB-7504X(?:[);/ ]|$)'
       model: 'Tab 7'
       device: 'tablet'
-    - regex: 'PB-6505MC'
+    - regex: 'PB-6505'
       model: 'Tab V7'
       device: 'tablet'
     - regex: 'TB-X606[FXV](?:[);/ ]|$)'
@@ -12998,7 +13002,7 @@ Onda:
 
 # OnePlus (www.oneplus.com or oneplus.com.ru)
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[0137]|LE212[035]|Nord N10 5G|LE210[01]|LE212[17]|DE2117|DN210[13]|EB210[13])(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[0137]|LE212[035]|Nord N10 5G|LE210[01]|LE212[17]|DE211[78]|DN210[13]|EB210[13])(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AC200[13](?:[);/ ]|$)'
@@ -13009,7 +13013,7 @@ OnePlus:
       model: 'Clover'
     - regex: 'BE201[135](?:[);/ ]|$)'
       model: 'Nord N100'
-    - regex: 'DE2117(?:[);/ ]|$)'
+    - regex: 'DE211[78](?:[);/ ]|$)'
       model: 'Nord N200 5G'
     - regex: 'BE2025(?:[);/ ]|$)'
       model: 'Nord N10'
@@ -13482,7 +13486,7 @@ OPPO:
       model: 'Reno 3A'
     - regex: '(?:PDCM00|A001OP)(?:[);/ ]|$)'
       model: 'Reno 3 5G'
-    - regex: '(?:PCRM00|CPH203[57]|CPH2009)'
+    - regex: '(?:PCRM00|CPH203[567]|CPH2009)'
       model: 'Reno 3 Pro'
     - regex: 'PCRT01(?:[);/ ]|$)'
       model: 'Reno 3 Lite'
@@ -13524,8 +13528,12 @@ OPPO:
       model: 'Reno 5G'
     - regex: '(?:CPH2235|PEQM00)(?:[);/ ]|$)'
       model: 'Reno 6'
+    - regex: 'CPH2237(?:[);/ ]|$)'
+      model: 'Reno 6 Z 5G'
     - regex: 'PEPM00(?:[);/ ]|$)'
       model: 'Reno 6 Pro'
+    - regex: 'CPH2247(?:[);/ ]|$)'
+      model: 'Reno 6 Pro 5G'
     - regex: 'PENM00(?:[);/ ]|$)'
       model: 'Reno 6 Pro Plus'
     - regex: '(?:PEYM00)(?:[);/ ]|$)'
@@ -18485,7 +18493,7 @@ Wink:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?W-V745'
@@ -18877,7 +18885,7 @@ Zopo:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|2106118C|M2004J(?:7[AB]|19)C|M2012K11(?:[CGI]|A[CI])|M2011K2[CG]|M2011J18C|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYIL]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182[CG]|2109119DG|joyeuse|galahad| MDG1'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|2106118C|M2004J(?:7[AB]|19)C|M2012K11(?:[CGI]|A[CI])|M2011K2[CG]|M2011J18C|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYIL]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182[CG]|21081111RG|2109119DG|2107113SG|joyeuse|galahad| MDG1'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -18949,6 +18957,10 @@ Xiaomi:
       model: 'Mi 10i'
     - regex: 'M2012K11G(?:[);/ ]|$)'
       model: 'Mi 11i'
+    - regex: '21081111RG(?:[);/ ]|$)'
+      model: 'Mi 11T'
+    - regex: '2107113SG(?:[);/ ]|$)'
+      model: 'Mi 11T Pro'
     - regex: '(?:M2101K9[GCR]|2109119DG)(?:[);/ ]|$)'
       model: 'Mi 11 Lite 5G'
     - regex: '(?:M2101K9A[GI]|Mi 11 Lite)(?:[);/ ]|$)'
@@ -21121,10 +21133,14 @@ Yxtel:
 
 # Proline
 Proline:
-  regex: '(H10882M-TN)(?:[);/ ]|$)'
+  regex: 'Proline_|(?:H10882M-TN)(?:[);/ ]|$)'
   device: 'tablet'
-  model: '$1'
-
+  models:
+    - regex: 'Proline[_ ]FalconXL'
+      device: 'smartphone'
+      model: 'Falcon XL'
+    - regex: '(H10882M-TN)'
+      model: '$1'
 # Yota
 Yota:
   regex: '(YD20[16]|YOTA 3[+])(?:[);/ ]|$)'
@@ -23194,7 +23210,7 @@ Hezire:
 
 # Hurricane (hurricanemobile.com)
 Hurricane:
-  regex: 'Hurricane[ _]|(?:Flame_Plus|Glaze|Cobra)(?:[);/ ]|$)'
+  regex: 'Hurricane[ _]|(?:Flame_Plus|Glaze|Cobra|Ridge Plus|Rush Plus)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Hurricane[ _]IGNITE'
@@ -23211,6 +23227,10 @@ Hurricane:
       model: 'Cobra'
     - regex: 'Flame_Plus'
       model: 'Flame Plus'
+    - regex: 'Ridge Plus'
+      model: 'Ridge Plus'
+    - regex: 'Rush Plus'
+      model: 'Rush Plus'
 
 # iSwag (iswagmobile.com)
 iSWAG:
@@ -23230,7 +23250,7 @@ iSWAG:
 
 # Reeder (reeder.com.tr)
 Reeder:
-  regex: '(?:reeder[_ ](?:3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)|P12Curve|P13_Blue_Plus|P13_Blue_Ma(?:ks|x))(?:[);/ ]|$)'
+  regex: '(?:reeder[_ ](?:3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)|P12Curve|P13_Blue_Plus|P13_Blue_Ma(?:ks|x)|P13_Blue)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'reeder[_ ](3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)(?:[);/ ]|$)'
@@ -23247,6 +23267,9 @@ Reeder:
     - regex: 'P13_Blue_Plus'
       device: 'smartphone'
       model: 'P13 Blue Plus'
+    - regex: 'P13_Blue'
+      device: 'smartphone'
+      model: 'P13 Blue'
 
 
 # ELARI (elari.net)
@@ -25201,7 +25224,7 @@ Smart:
 
 # Stylo
 Stylo:
-  regex: 'STYLO|(?:S57_A[ZL]URE|Ithemba|S56 MIST|S55 Nova|S53_STARK|S40_LIFE|LIFE_2|S49[_ ](?:MONO|POISE|ECO))(?:[);/ ]|$)'
+  regex: 'STYLO|(?:S57_A[ZL]URE|Ithemba|S56 MIST|S55 Nova|S64_ALPHA|S53_STARK|S40_LIFE|LIFE_2|S49[_ ](?:MONO|POISE|ECO))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'STYLO[ _](F1)'
@@ -25234,6 +25257,8 @@ Stylo:
       model: 'S49 Mono'
     - regex: 'S49[_ ]ECO'
       model: 'S49 Eco'
+    - regex: 'S64_ALPHA'
+      model: 'S64 Alpha'
 
 # galaxy innovations or GI  (www.galaxy-innovations.ru)
 Galaxy Innovations:
